--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
     "name": "@panaaj/sk-types",
-    "version": "1.1.0",
+    "version": "1.1.1",
     "description": "Signal K plugin types.",
     "keywords": [
-        "signal k", "typescript"
+        "signal k",
+        "typescript"
     ],
     "author": "AdrianP",
     "contributors": [
@@ -11,5 +12,15 @@
             "name": "panaaj@hotmail.com"
         }
     ],
-    "license": "Apache-20"
+    "license": "Apache-20",
+    "main": "dist/index.js",
+    "types": "dist/index.d.ts",
+    "scripts": {
+        "prepare": "npm run build",
+        "build": "tsc",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "devDependencies": {
+        "typescript": "^3.8.3"
+    }
 }
